
2012-March-10 Struan Robertson

	* Rdouble.cpp/.h: Added a general Rdouble range setting method, and 
	propagated it to other classes, as part of the refactoring needed to 
	implement linked parameters.  

2012-February-17 Struan Robertson

	* TMatrix.h: Altered includes to address template compilation issue on 
	RHEL 6/g++ 4.4.6.  

2012-February-10 Chris Morley

	* MesmerQA/Acetyl O2 association/baselines/Win32/mesmer.test,
	MesmerQA/Acetyl O2 association/baselines/Win32/readme.txt
	Update WIN32 baseline and add note that it is for Release version;
	Debug version is slightly different.
	
	* Windows VC10/distribution/NSISScriptToCreateInstaller.nsi:
	After much struggling, I think this now installs and uninstalls ok on
	Window 7, at least.

2012-February-07 Struan Robertson

	* Linux, 64 and 32 bit, baseline update for MesmerQA and examples.  

2012-February-06 Chris Morley

	* Windows VC10/distribution/NSISScriptToCreateInstaller.nsi: update installer.
	  Use pdf rather than docx because docx equations no good in OpenOffice
	* Windows VC10/distribution/ReadMe.txt: Update including mentioning QA run.
	* Windows VC10/qd/qd.vcxproj, Windows VC10/TinyXML/TinyXML.vcxproj: remove some
	MS warnings

2012-February-06 Chris Morley

	* librarymols.xml: update OH to use the DefinedStatesRotors method. Add more source metadata.

2012-February-05 Struan Robertson

	* Examples.bat/.sh: Updated to use i-propyl LM fitting example.  

2012-February-05 Struan Robertson

	* MESMER manual.docx: Documentation format and content updated.
	* Windows baseline update for MesmerQA and examples.  

2012-February-03 Struan Robertson

	* System.h: Mesmer Version altered to 1.0.  

2012-January-15 Struan Robertson

	* MESMER manual.doc: Documentation update.  

2012-January-15 Struan Robertson

	* defaults.xml: Altered default of me:deltaEDownTExponent to 0.0 
	so that MesmerQA tests pass.  
	* Windows VC10: Added missing project files.

2011-December-31 Chris Morley
