@@ -14,15 +14,20 @@
 
 namespace mesmer
 {
+  //
+  // Read parameter constraints.
+  //
+  void FittingUtils::ReadParameterConstraints(PersistPtr ppControl) {
+  }
 
   //
   // Get the current location.
   //
   void FittingUtils::GetLocation(vector<double> &loc) const {
 
-    for(size_t iVar(0) ; iVar < loc.size() ; iVar++) {
-      loc[iVar] = *Rdouble::withRange()[iVar] ;
-    }
+	for(size_t iVar(0) ; iVar < loc.size() ; iVar++) {
+	  loc[iVar] = *Rdouble::withRange()[iVar] ;
+	}
 
   }
 
@@ -31,9 +36,11 @@ namespace mesmer
   //
   void FittingUtils::SetLocation(vector<double> &loc) const {
 
-    for(size_t iVar(0) ; iVar < loc.size() ; iVar++) {
-      *Rdouble::withRange()[iVar] = loc[iVar] ;
-    }
+	for(size_t iVar(0) ; iVar < loc.size() ; iVar++) {
+	  *Rdouble::withRange()[iVar] = loc[iVar] ;
+	}
+
+	// Need somthing in here to set linked variables.
 
   }
 
@@ -42,19 +49,19 @@ namespace mesmer
   //
   bool FittingUtils::CheckBounds(const vector<double> &A) const {
 
-    bool check(true) ;
-    for(size_t iVar(0) ; iVar < A.size() && check ; iVar++) {
+	bool check(true) ;
+	for(size_t iVar(0) ; iVar < A.size() && check ; iVar++) {
 
-      double var = A[iVar] ;
-      double lower(0.0), upper(0.0), stepsize(0.0) ;
+	  double var = A[iVar] ;
+	  double lower(0.0), upper(0.0), stepsize(0.0) ;
 
-      Rdouble::withRange()[iVar]->get_range(lower, upper, stepsize) ;
+	  Rdouble::withRange()[iVar]->get_range(lower, upper, stepsize) ;
 
-      check = ((var > lower) && (var < upper)) ;
+	  check = ((var > lower) && (var < upper)) ;
 
-    }
+	}
 
-    return check ;
+	return check ;
 
   }
 
@@ -66,46 +73,46 @@ namespace mesmer
   //
   void FittingUtils::NumericalDerivatives(System* pSys, vector<double> &residuals, double delta, vector<double> &gradient, dMatrix &hessian) const {
 
-    size_t nVar = gradient.size() ;
-    vector<double> location(nVar,0.0), update(nVar,0.0) ;
-    vector<double> derivatives ;
-    GetLocation(location) ;
-    for (size_t iVar(0) ; iVar < nVar ; iVar++) {
+	size_t nVar = gradient.size() ;
+	vector<double> location(nVar,0.0), update(nVar,0.0) ;
+	vector<double> derivatives ;
+	GetLocation(location) ;
+	for (size_t iVar(0) ; iVar < nVar ; iVar++) {
 
-      update = location ;
-      update[iVar] *= (1.0 + delta) ;
-      SetLocation(update) ;
+	  update = location ;
+	  update[iVar] *= (1.0 + delta) ;
+	  SetLocation(update) ;
 
-      double chiSquare(0.0) ;
-      vector<double> newResiduals ;
-      pSys->calculate(chiSquare, newResiduals) ;
+	  double chiSquare(0.0) ;
+	  vector<double> newResiduals ;
+	  pSys->calculate(chiSquare, newResiduals) ;
 
-      size_t sizeRes = residuals.size() ;
-      if (newResiduals.size() != sizeRes) {
-        cerr << "Error: residual vectors are of different size" ;
-      }
+	  size_t sizeRes = residuals.size() ;
+	  if (newResiduals.size() != sizeRes) {
+		cerr << "Error: residual vectors are of different size" ;
+	  }
 
-      double grad(0.0), hess(0.0) ; 
-      for (size_t i(0) ; i < sizeRes ; i++) {
-        double deriv = (residuals[i] - newResiduals[i])/(delta*location[iVar]) ;
-        grad += residuals[i]*deriv ;
-        hess += deriv*deriv ;
-        derivatives.push_back(deriv) ;
-      }
-      gradient[iVar] = grad ;
-      hessian[iVar][iVar] = hess ;
+	  double grad(0.0), hess(0.0) ; 
+	  for (size_t i(0) ; i < sizeRes ; i++) {
+		double deriv = (residuals[i] - newResiduals[i])/(delta*location[iVar]) ;
+		grad += residuals[i]*deriv ;
+		hess += deriv*deriv ;
+		derivatives.push_back(deriv) ;
+	  }
+	  gradient[iVar] = grad ;
+	  hessian[iVar][iVar] = hess ;
 
-      for (size_t jVar(0) ; jVar < iVar ; jVar++) {
-        hess = 0.0 ;
-        for (size_t i(0),ii(iVar*sizeRes),jj(jVar*sizeRes) ; i < sizeRes ; i++, ii++, jj++) {
-          hess += derivatives[ii]*derivatives[jj] ;
-        }
-        hessian[iVar][jVar] = hessian[jVar][iVar] = hess ;
-      }
+	  for (size_t jVar(0) ; jVar < iVar ; jVar++) {
+		hess = 0.0 ;
+		for (size_t i(0),ii(iVar*sizeRes),jj(jVar*sizeRes) ; i < sizeRes ; i++, ii++, jj++) {
+		  hess += derivatives[ii]*derivatives[jj] ;
+		}
+		hessian[iVar][jVar] = hessian[jVar][iVar] = hess ;
+	  }
 
-    }
+	}
 
-    SetLocation(location) ;
+	SetLocation(location) ;
 
   }
 
@@ -114,52 +121,52 @@ namespace mesmer
   //
   void FittingUtils::ResultsAndStatistics(System* pSys, dMatrix &hessian) const {
 
-    // Calculate model values with optimum parameters.
+	// Calculate model values with optimum parameters.
 
-    double chiSquare(0.0) ;
-    vector<double> residuals ;
-    pSys->calculate(chiSquare, residuals, true) ;
+	double chiSquare(0.0) ;
+	vector<double> residuals ;
+	pSys->calculate(chiSquare, residuals, true) ;
 
-    // Calculate covaraince matrix.
+	// Calculate covaraince matrix.
 
-    hessian.invertGaussianJordan() ;
+	hessian.invertGaussianJordan() ;
 
-    cinfo << endl << "Chi^2 = " << chiSquare << endl << endl << "Best fit parameters:" << endl << endl ;
+	cinfo << endl << "Chi^2 = " << chiSquare << endl << endl << "Best fit parameters:" << endl << endl ;
 
-    // Best fit parameters.
+	// Best fit parameters.
 
-    for(size_t iVar(0) ; iVar < hessian.size() ; iVar++) {
+	for(size_t iVar(0) ; iVar < hessian.size() ; iVar++) {
 
-      Rdouble var = *Rdouble::withRange()[iVar] ;
-      double sigma = sqrt(hessian[iVar][iVar]) ;
-      cinfo << var.get_varname() << " = " << setprecision(6) << double(var) << " +/- " << sigma << endl; 
+	  Rdouble var = *Rdouble::withRange()[iVar] ;
+	  double sigma = sqrt(hessian[iVar][iVar]) ;
+	  cinfo << var.get_varname() << " = " << setprecision(6) << double(var) << " +/- " << sigma << endl; 
 
-    }
+	}
 
-    // Correlation coefficients.
+	// Correlation coefficients.
 
-    cinfo << endl << "Correlation coefficients:" << endl << endl ;
+	cinfo << endl << "Correlation coefficients:" << endl << endl ;
 
-    for(size_t iVar(0) ; iVar < hessian.size() ; iVar++) {
+	for(size_t iVar(0) ; iVar < hessian.size() ; iVar++) {
 
-      Rdouble vara = *Rdouble::withRange()[iVar] ;
-      double sigma = sqrt(hessian[iVar][iVar]) ;
-      for(size_t jVar(0) ; jVar < iVar ; jVar++) {
-        double corrlCoeff = hessian[iVar][jVar]/(sigma*sqrt(hessian[jVar][jVar])) ;
-        Rdouble varb = *Rdouble::withRange()[jVar] ;
-        cinfo << vara.get_varname() << " , " << varb.get_varname() << " = " << setprecision(6) << corrlCoeff << endl; 
-      }
+	  Rdouble vara = *Rdouble::withRange()[iVar] ;
+	  double sigma = sqrt(hessian[iVar][iVar]) ;
+	  for(size_t jVar(0) ; jVar < iVar ; jVar++) {
+		double corrlCoeff = hessian[iVar][jVar]/(sigma*sqrt(hessian[jVar][jVar])) ;
+		Rdouble varb = *Rdouble::withRange()[jVar] ;
+		cinfo << vara.get_varname() << " , " << varb.get_varname() << " = " << setprecision(6) << corrlCoeff << endl; 
+	  }
 
-    }
+	}
 
-    // Goodness of fit.
+	// Goodness of fit.
 
-    size_t NoDegFreedom = residuals.size() - hessian.size() ;
-    cinfo << endl << "Goodness of Fit:" << endl << endl ;
-    cinfo << "Number of degrees of Freedom = " <<  NoDegFreedom << endl ;
-    cinfo << "Chi^2 probability = " << ChiSquaredPrbFn(chiSquare/2.0, double(NoDegFreedom)/2.0) << endl << endl ;
+	size_t NoDegFreedom = residuals.size() - hessian.size() ;
+	cinfo << endl << "Goodness of Fit:" << endl << endl ;
+	cinfo << "Number of degrees of Freedom = " <<  NoDegFreedom << endl ;
+	cinfo << "Chi^2 probability = " << ChiSquaredPrbFn(chiSquare/2.0, double(NoDegFreedom)/2.0) << endl << endl ;
 
-    return ;
+	return ;
 
   }
 
